; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r819xE_phy.c_phy_FwRFSerialRead.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r819xE_phy.c_phy_FwRFSerialRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@QPNR = common dso_local global i32 0, align 4
@RF_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32, i32)* @phy_FwRFSerialRead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phy_FwRFSerialRead(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i64 0, i64* %10, align 8
  %11 = load i32, i32* %7, align 4
  %12 = and i32 %11, 255
  %13 = shl i32 %12, 12
  %14 = load i32, i32* %9, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %6, align 4
  %17 = and i32 %16, 3
  %18 = shl i32 %17, 20
  %19 = load i32, i32* %9, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = or i32 %21, -2147483648
  store i32 %22, i32* %9, align 4
  br label %23

23:                                               ; preds = %36, %3
  %24 = load %struct.net_device*, %struct.net_device** %5, align 8
  %25 = load i32, i32* @QPNR, align 4
  %26 = call i32 @read_nic_dword(%struct.net_device* %24, i32 %25)
  %27 = and i32 %26, -2147483648
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %23
  %30 = load i64, i64* %10, align 8
  %31 = add nsw i64 %30, 1
  store i64 %31, i64* %10, align 8
  %32 = icmp slt i64 %30, 100
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = call i32 @udelay(i32 10)
  br label %36

35:                                               ; preds = %29
  br label %37

36:                                               ; preds = %33
  br label %23

37:                                               ; preds = %35, %23
  %38 = load %struct.net_device*, %struct.net_device** %5, align 8
  %39 = load i32, i32* @QPNR, align 4
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @write_nic_dword(%struct.net_device* %38, i32 %39, i32 %40)
  br label %42

42:                                               ; preds = %55, %37
  %43 = load %struct.net_device*, %struct.net_device** %5, align 8
  %44 = load i32, i32* @QPNR, align 4
  %45 = call i32 @read_nic_dword(%struct.net_device* %43, i32 %44)
  %46 = and i32 %45, -2147483648
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %56

48:                                               ; preds = %42
  %49 = load i64, i64* %10, align 8
  %50 = add nsw i64 %49, 1
  store i64 %50, i64* %10, align 8
  %51 = icmp slt i64 %49, 100
  br i1 %51, label %52, label %54

52:                                               ; preds = %48
  %53 = call i32 @udelay(i32 10)
  br label %55

54:                                               ; preds = %48
  store i32 0, i32* %4, align 4
  br label %61

55:                                               ; preds = %52
  br label %42

56:                                               ; preds = %42
  %57 = load %struct.net_device*, %struct.net_device** %5, align 8
  %58 = load i32, i32* @RF_DATA, align 4
  %59 = call i32 @read_nic_dword(%struct.net_device* %57, i32 %58)
  store i32 %59, i32* %8, align 4
  %60 = load i32, i32* %8, align 4
  store i32 %60, i32* %4, align 4
  br label %61

61:                                               ; preds = %56, %54
  %62 = load i32, i32* %4, align 4
  ret i32 %62
}

declare dso_local i32 @read_nic_dword(%struct.net_device*, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @write_nic_dword(%struct.net_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
